Formulario de mercados

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
         <li class="nav-item">
             <a class="nav-link" href="./facturas/facturas.php">Facturas</a>
         </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="./mercados/mercados.php">Mercados</a>
+        </li>
+
         <li class="nav-item">
             <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
         </li>
