--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li class = "nav-item">
             <a class = "nav-link" href="./almacen/almacen.php">Almacen</a>
         </li>
+        <li class = "nav-item">
+            <a class = "nav-link" href="./nucleo/nucleo.php">Nucleo Familiar</a>
+        </li>
     </ul>
 
     <div class="container">
