--- a/index.html
+++ b/index.html
@@ -24,19 +24,7 @@
             <a class="nav-link active" href="index.html">inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link active" href="./personas/personas.php">Personas</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="./facturas/facturas.php">Facturas</a>
-        </li>
-
-        <li class="nav-item">
             <a class="nav-link" href="./mercados/mercados.php">Mercados</a>
-        </li>
-
-        <li class="nav-item">
-            <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
         </li>
         <li class = "nav-item">
             <a class = "nav-link" href="./almacen/almacen.php">Almacen</a>
@@ -44,6 +32,14 @@
         <li class = "nav-item">
             <a class = "nav-link" href="./nucleo/nucleo.php">Nucleo Familiar</a>
         </li>
+
+        <li class="nav-item">
+            <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./busquedas/busquedas.php">Consultas</a>
+        </li>
+        
     </ul>
 
     <div class="container">
