--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </li>
 
         <li class="nav-item">
-            <a class="nav-link" href="./busquedas/busquedas.php">Busquedas</a>
+            <a class="nav-link" href="./busquedas/busquedas.php">Búsquedas</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="./busquedas/busquedas.php">Consultas</a>
